--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,5 @@
+/*
+
 html,
 body {
   padding: 0;
@@ -24,3 +26,276 @@ a {
     background: black;
   }
 }
+*/
+
+@charset "utf-8";
+:root {
+    --highlight: hotpink;
+    --text: whitesmoke;
+    --background: black;
+  }
+
+
+html,body
+{
+    height:100%;
+}
+
+.center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+  }
+
+.vertical-center {
+    margin: 0;
+    position: absolute;
+    top: 50%;
+    -ms-transform: translateY(-50%);
+    transform: translateY(-50%);
+}
+
+.vertical-centered-line {
+    line-height: 100%;
+    background-color: aquamarine;
+}
+
+#header {
+    border-style: none;
+    /* width: 100%; */
+    height: auto;
+    margin: 0;
+    padding-top: 2px;
+    padding-bottom: 2px;
+    padding-left: 25px;
+    
+    font-size: 1.2em;
+    background-color: var(--highlight);
+}
+#wrapper {
+    margin:0px;
+    padding:0px;
+    background-color: var(--background);
+    width: 100%;   
+    height: 100%;
+}
+body {
+    margin:0px;
+    padding:0px;
+    font-family: "Trebuchet MS", Helvetica, sans-serif;
+    font-size: 0.9em;
+    text-align: justify;
+}
+h1 {
+    color: var(--text);
+}
+#footer {
+    position:fixed;
+    bottom: 0px;
+    width: 99%;
+    text-align: center;
+    font-size: 0.8em;
+    margin: 0;
+    padding: 10px;
+    padding-right: 30px;
+    background-color: var(--background);
+    border-top: thin solid var(--highlight);
+    clear: both;
+    color: var(--highlight);
+
+    display: flex;
+    justify-content: space-between;
+}
+
+a {   
+    color: var(--highlight);   
+}
+
+
+
+#jokewrapper {
+    display: flex;
+    flex-direction: column;
+}
+
+
+
+#likes-container {
+    margin-top: 1em;
+    display: flex;
+    justify-content: space-between;
+    /* background-color: black; */
+}
+
+#like-number{
+    /* background-color: #270c39; */
+    height: auto;
+    width: auto;
+    color: var(--highlight);
+    font-size: large;
+    display: flex;
+    align-items: center;
+  }
+  
+#like-button{
+   width: auto;
+   font-size: x-large;
+   position: relative;
+   text-align: right;
+   /* background-color: #BBBBBB; */
+   display: flex;
+   align-items: center;
+}
+
+#joke-navigation-button-container {
+    margin-bottom: 1em;
+    margin-left: 0;
+    padding: 0;
+    display: flex;
+    /* background-color: black; */
+    justify-content: space-between;
+}
+
+.icon-button {
+   background-color: transparent;
+   margin: 0;
+   padding: 0; 
+   border: none;
+   width: auto;
+   height: auto;
+   font-size: x-large;
+   display: flex;
+}
+  
+  /* increase size on click */
+.icon-button:active {
+   transform: scale(1.2);
+}
+
+
+
+ion-icon{
+    /* background-color: aqua; */
+    margin: 0;
+    padding: 0;
+    /*margin-left: auto;
+    margin-right: 0%;
+    */
+    fill:transparent;
+    color: var(--highlight);
+    stroke-width:50;
+    transition:all 0.5s;
+ }
+ion-icon.active{
+   animation:like 0.5s 1;
+   fill: var(--highlight);
+   stroke:none;
+}
+  
+@-webkit-keyframes like {
+   0%   { transform: scale(1); }
+   90%   { transform: scale(1.2); }
+   100% { transform: scale(1.1); }
+}
+
+.card {
+    max-width: 750px;
+    border: 1px solid var(--highlight);
+    border-radius: 15px;
+    background-color: var(--highlight);
+    color: var(--text);
+    font-size: 2.5em;
+    box-shadow:
+        0 2.8px 2.2px rgba(255, 105, 180, 0.030),
+        0 6.7px 5.3px rgba(255, 105, 180, 0.042),
+        0 12.5px 10px rgba(255, 105, 180, 0.055),
+        0 22.3px 17.9px rgba(255, 105, 180, 0.066),
+        0 41.8px 33.4px rgba(255, 105, 180, 0.076),
+        0 100px 80px rgba(255, 105, 180, 0.10);
+    /*      
+    box-shadow:
+      0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+      0 6.7px 5.3px rgba(0, 0, 0, 0.048),
+      0 12.5px 10px rgba(0, 0, 0, 0.06),
+      0 22.3px 17.9px rgba(0, 0, 0, 0.072),
+      0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+      0 100px 80px rgba(0, 0, 0, 0.12);
+      */
+    display: flex;
+    flex-direction: column;
+    padding: 1rem;
+    width: auto;
+    margin: 0;
+    position: relative;
+    text-align: center;
+  }
+
+
+/*
+#main {
+    width: 560px;
+    float: left;
+    margin: 0 10px 50px 20px;   
+    padding-right: 10px;
+}
+#logo {
+    padding: 10px;
+    float: left;
+}
+#top_menu {
+    float: right;
+    padding: 50px 20px 0px 0px;
+    font-size: 1.2em;
+    color: #270c39;
+}
+
+ul.errorlist {
+    margin: 0;
+    padding: 0;
+}
+.errorlist li, .error {
+    border: 1px solid red;
+    color: red;
+    background: rgba(255, 0, 0, 0.15);
+    list-style-position: inside;
+    display: block;
+    font-size: 1.2em;
+    margin: 0 0 3px;
+    padding: 4px 5px;
+    text-align: center;    
+    border-radius: 3px;
+}
+input, button, textarea {
+    width: 100%;
+    padding: 5px!important;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box; 
+    border-radius: 3px;
+    border-style: solid;
+    border-width: 1px;
+    border-color: rgb(169,169,169)
+}
+input[type="submit"], button {  
+    height: 30px;
+    width: 150px;
+    float: right;
+}
+input { 
+    height: 30px;
+}
+.success {
+    background-color: rgba(0, 128, 0, 0.15);
+    padding: 10px;
+    text-align: center;
+    color: green;
+    border: 1px solid green;
+    border-radius: 3px;
+}
+.required label:after {
+    content: "*";
+}
+*/
