--- a/styles/globals.css
+++ b/styles/globals.css
@@ -206,7 +206,10 @@ ion-icon.active{
     border-radius: 15px;
     background-color: var(--highlight);
     color: var(--text);
+    /*
     font-size: 2.5em;
+    */
+    font-size: 1.7vw;
     box-shadow:
         0 2.8px 2.2px rgba(255, 105, 180, 0.030),
         0 6.7px 5.3px rgba(255, 105, 180, 0.042),
