--- a/styles/globals.css
+++ b/styles/globals.css
@@ -106,7 +106,13 @@ h1 {
     color: var(--highlight);
 
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+}
+
+#about {
+  font-size: 1.5em;
+  background-color: var(--background);
+  color: var(--highlight);
 }
 
 a {   
