--- a/styles/globals.css
+++ b/styles/globals.css
@@ -111,6 +111,7 @@ h1 {
 
 #about {
   width: 99%;
+  text-align: left;
   font-size: 1.5em;
   background-color: var(--background);
   color: var(--highlight);
